# lz

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  rpm.sh
.github/workflows/: release.yml  update-homebrew-tap.yml
src/: main.rs
